--- a/application/package.json
+++ b/application/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0"
   },
